// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-react > renders the Button wrapper 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/button.yaml

import "@teseor/css/components/button.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { asElement, type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger";

type ButtonSize = "sm" | "md" | "lg";

type ButtonAs = "button" | "a";

type ButtonOwnProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ButtonAs;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Icon rendered before the label in the inline direction. Slot size scales with \`size\`. Accepts any node (icon component, SVG, etc.). */
  iconStart?: ReactNode;
  /** Icon rendered after the label in the inline direction. Accepts any node. */
  iconEnd?: ReactNode;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
  children?: ReactNode;
  ref?: Ref<HTMLElement>;
};

export type ButtonProps = Readonly<
  ButtonOwnProps & Omit<ComponentProps<"button">, keyof ButtonOwnProps>
>;

/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`tsx
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`tsx
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`tsx
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
export function Button(props: ButtonProps) {
  const {
    variant,
    intent,
    size,
    as,
    disabled,
    loading,
    iconStart,
    iconEnd,
    block,
    children,
    ref,
    className,
    ...rest
  } = props;

  const Component = asElement(as ?? "button");
  const isButton = Component === "button";
  const inactive = disabled === true || loading === true;
  const mergedClassName = className ? \`t-button \${className}\` : "t-button";

  return (
    <Component
      {...rest}
      ref={ref}
      className={mergedClassName}
      data-variant={variant}
      data-intent={intent}
      {...responsiveDataAttrs("size", size)}
      {...responsiveDataAttrs("block", block)}
      data-loading={loading === true ? "true" : undefined}
      disabled={isButton ? inactive : undefined}
      aria-disabled={!isButton && inactive ? "true" : undefined}
      aria-busy={loading === true ? "true" : undefined}
    >
      {iconStart != null ? (
        <span data-button-icon="" data-position="start">
          {iconStart}
        </span>
      ) : null}
      <span data-button-label="">{children}</span>
      {iconEnd != null ? (
        <span data-button-icon="" data-position="end">
          {iconEnd}
        </span>
      ) : null}
      {loading ? <span data-button-spinner="" aria-hidden="true" /> : null}
    </Component>
  );
}
"
`;

exports[`gen-react > renders the Cluster wrapper with multiple enum-typed props 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/cluster.yaml

import "@teseor/css/components/cluster.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type ClusterProps = Readonly<
  ClusterOwnProps & Omit<ComponentProps<"div">, keyof ClusterOwnProps>
>;

/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`tsx
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
export function Cluster(props: ClusterProps) {
  const { gap, align, justify, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-cluster \${className}\` : "t-cluster";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
      {...responsiveDataAttrs("justify", justify)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the Stack wrapper with an enum-typed prop 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/stack.yaml

import "@teseor/css/components/stack.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type StackProps = Readonly<StackOwnProps & Omit<ComponentProps<"div">, keyof StackOwnProps>>;

/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`tsx
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
export function Stack(props: StackProps) {
  const { gap, align, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-stack \${className}\` : "t-stack";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the barrel 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

export { Button, type ButtonProps } from "./Button.tsx";
"
`;

exports[`gen-react > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

import {
  Children,
  cloneElement,
  type ElementType,
  isValidElement,
  type ReactElement,
  type ReactNode,
  type Ref,
  useCallback,
  useEffect,
  useId,
  useRef,
  useState,
} from "react";

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

// matchMedia queries baked from specs/_breakpoints.yaml. Single source.
const BREAKPOINT_QUERIES: Partial<Record<Breakpoint, string>> = {
  md: "(min-width: 48rem)",
  lg: "(min-width: 64rem)",
  xl: "(min-width: 80rem)",
  "2xl": "(min-width: 96rem)",
};

function readActiveBreakpoint(): Breakpoint {
  if (typeof window === "undefined" || typeof window.matchMedia !== "function") return "base";
  for (let i = RESPONSIVE_KEYS.length - 1; i > 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (!key) continue;
    const q = BREAKPOINT_QUERIES[key];
    if (q && window.matchMedia(q).matches) return key;
  }
  return "base";
}

/** Reactive active-breakpoint key. Drives \`Responsive<T>\` runtime behavior. */
export function useActiveBreakpoint(): Breakpoint {
  const [bp, setBp] = useState<Breakpoint>(() => readActiveBreakpoint());
  useEffect(() => {
    if (typeof window === "undefined" || typeof window.matchMedia !== "function") return;
    const onChange = () => setBp(readActiveBreakpoint());
    const cleanups: Array<() => void> = [];
    for (const key of RESPONSIVE_KEYS) {
      if (key === "base") continue;
      const q = BREAKPOINT_QUERIES[key];
      if (!q) continue;
      const mql = window.matchMedia(q);
      mql.addEventListener("change", onChange);
      cleanups.push(() => mql.removeEventListener("change", onChange));
    }
    return () => {
      for (const fn of cleanups) fn();
    };
  }, []);
  return bp;
}

/** Resolve a \`Responsive<boolean>\` at the active breakpoint (mobile-first cascade). */
export function isActiveAt(value: unknown, bp: Breakpoint): boolean {
  if (value === true) return true;
  if (value == null || value === false) return false;
  if (typeof value !== "object") return false;
  const obj = value as Partial<Record<Breakpoint, boolean>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key] === true;
  }
  return false;
}

/** Resolve a \`Responsive<T>\` at the active breakpoint (mobile-first cascade). */
export function resolveResponsive<T>(
  value: Responsive<T> | undefined,
  bp: Breakpoint,
): T | undefined {
  if (value == null) return undefined;
  if (typeof value !== "object" || Array.isArray(value)) return value as T;
  const obj = value as Partial<Record<Breakpoint, T>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key];
  }
  return undefined;
}

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    // Emit every declared key (including \`false\` at non-base) — the CSS
    // override pattern needs the explicit attribute to match against.
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null) continue;
      // \`base: false\` has no attribute (absence-of) — emitting "false" would never match.
      if (key === "base" && v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : v === false ? "false" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}

/** Widen a narrow tag-name union back to ElementType so JSX's ref slot isn't pinned. */
export function asElement(value: ElementType): ElementType {
  return value;
}

// ── Slot — clone-into-child pattern for \`asChild\` composites ────────────────

type SlotProps = Record<string, unknown> & { children?: ReactNode };

function mergeSlotProps(
  childProps: Record<string, unknown>,
  slotProps: Record<string, unknown>,
): Record<string, unknown> {
  const out: Record<string, unknown> = { ...childProps };
  for (const key of Object.keys(slotProps)) {
    if (key === "children") continue;
    const childValue = childProps[key];
    const slotValue = slotProps[key];
    if (key === "style") {
      out[key] = {
        ...((childValue as object | undefined) ?? {}),
        ...((slotValue as object | undefined) ?? {}),
      };
    } else if (key === "className") {
      out[key] = [childValue, slotValue].filter(Boolean).join(" ");
    } else if (
      key.startsWith("on") &&
      typeof childValue === "function" &&
      typeof slotValue === "function"
    ) {
      // Compose handlers: child fires first, then ours.
      out[key] = (...args: unknown[]) => {
        (childValue as (...a: unknown[]) => void)(...args);
        (slotValue as (...a: unknown[]) => void)(...args);
      };
    } else {
      // Slot props win for refs, aria-*, data-*.
      out[key] = slotValue;
    }
  }
  return out;
}

/**
 * Clone-into-child: merges slot props onto a single React element child.
 * Used by composite wrappers when \`asChild\` is true — \`aria-describedby\`,
 * event handlers, and the anchor binding land on the consumer's element
 * instead of an extra \`<span>\` wrapper. Warns and renders nothing if
 * \`children\` isn't exactly one valid React element (fragment, multiple
 * children, or null all hit the warn path — never throws).
 */
export function Slot({ children, ...slotProps }: SlotProps): ReactElement | null {
  const elements = Children.toArray(children).filter(isValidElement);
  if (elements.length !== 1) {
    if (typeof console !== "undefined") {
      console.warn(
        \`Slot: expected exactly one React element child, got \${elements.length}. Pass a single element (e.g. <button>...</button>) or drop \\\`asChild\\\`.\`,
      );
    }
    return null;
  }
  const child = elements[0] as ReactElement<Record<string, unknown>>;
  return cloneElement(child, mergeSlotProps(child.props ?? {}, slotProps));
}

// ── Overlay hook — used by composite overlay components ────────────────────

export type OverlayInteraction = {
  on: { event: string; target?: string; key?: string };
  do: "open" | "close" | "toggle";
  /** ms delay resolved at the call site from the consumer's delay props. */
  delayMs?: number;
  when?: string;
};

type OverlayConfig = {
  open?: boolean;
  defaultOpen?: boolean;
  onOpenChange?: (open: boolean) => void;
  anchorVar: string;
  popoverMode: "auto" | "manual" | "hint";
  interactions: ReadonlyArray<OverlayInteraction>;
  /** Active at the current breakpoint? state machine no-ops; matches CSS \`data-disabled-bp\`. */
  disabled?: Responsive<boolean>;
};

type AnyEventHandler = (event: unknown) => void;

type OverlayHandlers = Record<string, AnyEventHandler>;

type OverlayReturn<T extends HTMLElement> = {
  open: boolean;
  state: "open" | "closed";
  activeBp: Breakpoint;
  setOpen: (next: boolean) => void;
  anchorName: string;
  anchorVar: string;
  popoverId: string;
  popoverMode: "auto" | "manual" | "hint";
  contentRef: Ref<T>;
  triggerHandlers: OverlayHandlers;
};

function sanitizeId(id: string): string {
  return id.replace(/[^a-zA-Z0-9_-]/g, "");
}

// \`:popover-open\` throws SyntaxError on engines that don't recognize it; probe once.
const SUPPORTS_POPOVER_OPEN_SELECTOR =
  typeof CSS !== "undefined" &&
  typeof CSS.supports === "function" &&
  CSS.supports("selector(:popover-open)");

function popoverIsOpen(node: HTMLElement): boolean | undefined {
  if (!SUPPORTS_POPOVER_OPEN_SELECTOR) return undefined;
  try {
    return node.matches(":popover-open");
  } catch {
    return undefined;
  }
}

const EVENT_TO_HANDLER: Record<string, string> = {
  pointerenter: "onPointerEnter",
  pointerleave: "onPointerLeave",
  pointerdown: "onPointerDown",
  pointerup: "onPointerUp",
  click: "onClick",
  focusin: "onFocus",
  focusout: "onBlur",
  keydown: "onKeyDown",
  keyup: "onKeyUp",
};

/** State machine + popover toggle + anchor binding + event wiring for overlay composites. */
export function useOverlay<T extends HTMLElement = HTMLElement>(
  config: OverlayConfig,
): OverlayReturn<T> {
  const {
    open: openProp,
    defaultOpen = false,
    onOpenChange,
    anchorVar,
    popoverMode,
    interactions,
    disabled,
  } = config;
  const activeBp = useActiveBreakpoint();
  const isDisabled = isActiveAt(disabled, activeBp);

  const controlled = openProp !== undefined;
  const [internalOpen, setInternalOpen] = useState<boolean>(defaultOpen);
  const open = controlled ? Boolean(openProp) : internalOpen;
  const onOpenChangeRef = useRef(onOpenChange);
  useEffect(() => {
    onOpenChangeRef.current = onOpenChange;
  }, [onOpenChange]);

  const setOpen = useCallback(
    (next: boolean) => {
      if (!controlled) setInternalOpen(next);
      onOpenChangeRef.current?.(next);
    },
    [controlled],
  );

  const rawId = useId();
  const idCore = sanitizeId(rawId);
  const anchorName = \`--t-\${idCore}\`;
  const popoverId = \`t-overlay-\${idCore}\`;

  const contentRef = useRef<T>(null);

  const timersRef = useRef<{ open: number; close: number }>({ open: 0, close: 0 });
  const clearTimers = useCallback(() => {
    if (timersRef.current.open) window.clearTimeout(timersRef.current.open);
    if (timersRef.current.close) window.clearTimeout(timersRef.current.close);
    timersRef.current.open = 0;
    timersRef.current.close = 0;
  }, []);

  // \`openRef\` lets effect-bound handlers read latest state without re-binding.
  const openRef = useRef(open);
  useEffect(() => {
    openRef.current = open;
  }, [open]);

  const schedule = useCallback(
    (action: "open" | "close" | "toggle", delayMs: number) => {
      if (isDisabled) return;
      clearTimers();
      const next = action === "toggle" ? !openRef.current : action === "open";
      if (delayMs <= 0) {
        setOpen(next);
        return;
      }
      const slot: "open" | "close" = action === "close" ? "close" : "open";
      timersRef.current[slot] = window.setTimeout(() => setOpen(next), delayMs);
    },
    [clearTimers, setOpen, isDisabled],
  );

  useEffect(() => () => clearTimers(), [clearTimers]);

  // Drive Popover API from \`open\`. \`popoverIsOpen\` returns undefined on engines
  // without \`:popover-open\` — we attempt the call and catch the InvalidStateError.
  useEffect(() => {
    const node = contentRef.current;
    if (!node) return;
    const popoverState = popoverIsOpen(node);
    if (open && popoverState !== true) {
      try {
        node.showPopover();
      } catch {}
    } else if (!open && popoverState !== false) {
      try {
        node.hidePopover();
      } catch {}
    }
  }, [open]);

  // Document/window-bound rules. Listeners mount with the rules array;
  // \`when:\` is re-evaluated per fire via \`openRef\`.
  useEffect(() => {
    const cleanups: Array<() => void> = [];
    for (const rule of interactions) {
      const target = rule.on.target;
      if (target !== "document" && target !== "window") continue;
      const sink: EventTarget = target === "document" ? document : window;
      const handler = (event: Event) => {
        if (rule.when === "open" && !openRef.current) return;
        if (rule.on.key && event instanceof KeyboardEvent && event.key !== rule.on.key) return;
        schedule(rule.do, rule.delayMs ?? 0);
      };
      sink.addEventListener(rule.on.event, handler);
      cleanups.push(() => sink.removeEventListener(rule.on.event, handler));
    }
    return () => {
      for (const fn of cleanups) fn();
    };
  }, [interactions, schedule]);

  // Trigger-bound rules → React handlers spread on the wrapper element.
  // Same-event rules compose; \`when\` and \`on.key\` filter per-fire as above.
  const triggerHandlers: OverlayHandlers = {};
  for (const rule of interactions) {
    if (rule.on.target !== "trigger") continue;
    const handlerName = EVENT_TO_HANDLER[rule.on.event];
    if (!handlerName) continue;
    const previous = triggerHandlers[handlerName];
    const delayMs = rule.delayMs ?? 0;
    const next = (e: unknown) => {
      previous?.(e);
      if (rule.when === "open" && !openRef.current) return;
      if (rule.on.key) {
        if (!(e instanceof KeyboardEvent) || e.key !== rule.on.key) return;
      }
      schedule(rule.do, delayMs);
    };
    triggerHandlers[handlerName] = next;
  }

  return {
    open,
    state: open ? "open" : "closed",
    activeBp,
    setOpen,
    anchorName,
    anchorVar,
    popoverId,
    popoverMode,
    contentRef,
    triggerHandlers,
  };
}
"
`;
